# FindMyPackage.cmake

./: .gitignore  .travis.yml  FindMyPackage.cmake  README.md
test/: CMakeLists.txt  run-test.cmake  test-utils.cmake
test/directory-was-file/: CMakeLists.txt
test/invalid-version/: CMakeLists.txt
test/multiple-digits/: CMakeLists.txt
test/multiple-versions-duplicate/: CMakeLists.txt
test/multiple-versions-extra/: CMakeLists.txt
test/multiple-versions-major/: CMakeLists.txt
test/multiple-versions-minor/: CMakeLists.txt
test/multiple-versions-patch/: CMakeLists.txt
test/multiple-versions-tweak/: CMakeLists.txt
test/sanity/: CMakeLists.txt
test/simple-optional-found/: CMakeLists.txt
test/simple-optional-notfound/: CMakeLists.txt
test/simple-required-found/: CMakeLists.txt
test/simple-required-notfound/: CMakeLists.txt
test/version-was-file/: CMakeLists.txt
